--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 <body>
     <h1>Welcome to Telugu Community</h1>
-    
+    <h2>
+        <a href="login.html">Login</a>
+    </h2>
 </body>
 </html>
